--- a/main.html
+++ b/main.html
@@ -4,12 +4,42 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	
+	<style>
+	table, th, td
+	{border: 1px solid black;
+	background-color:yellow;}
+	</style>
+	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<h1>Student Details</h1>
+	
+	<table>
+		<tr>
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+		</tr>
+		<br>
+		<tr>
+			<td>Shaw</td>
+			<td>20</td>
+			<td>CSE</td>
+		</tr>
+		<br>
+		<tr>
+			<td>Adil</td>
+			<td>21</td>
+			<td>ECE</td>
+		</tr>
+		
+	
+	</table>
 
 </body>
 
