--- a/main.html
+++ b/main.html
@@ -17,9 +17,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<h1>Student Details</h1>
-	
-	<table>
+	<table >
+	<caption><b>Student Details</b></caption>
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
